# voicekeyboard

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  license.md  main.py  mkdocs.yml  pyproject.toml  readme.md  requirements-dev.txt  settings.ini
.github/workflows/: ci.yml  docs.yml
docs/: development.md  index.md  usage.md
docs/api/: app.md  hotkeys.md  preferences.md  settings.md  stt.md  tray.md  window.md
packaging/: macos.spec  voicekeyboard.spec  windows.spec
site/: 404.html  index.html  objects.inv
site/api/app/: index.html
site/api/hotkeys/: index.html
site/api/preferences/: index.html
site/api/settings/: index.html
site/api/stt/: index.html
site/api/tray/: index.html
site/api/window/: index.html
site/development/: index.html
site/search/: search_index.json
site/usage/: index.html
tests/: test_gui_smoke.py  test_hotkeys.py  test_hotkeys_service.py  test_label_updater.py  test_open_settings.py  test_preferences_dialog.py  test_preferences_input_device.py  test_ring_buffer.py  test_settings.py  test_settings_defaults.py  test_settings_validation.py  test_startup.py  test_stt_processing.py  test_tray_menu.py  test_utils.py
voicekeyboard/: __init__.py  app.py  hotkeys.py  preferences.py  settings.py  stt.py  tray.py  window.py
voicekeyboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
